unpackaged/main/default/objects/Student_Success_Survey__c/Student_Success_Survey__c.object-meta.xml
<CustomObject>
    <description>Contains results from the student success survey</description>
    <label>Student Success Survey</label>
    <nameField>
        <displayFormat>SSS-{00000}</displayFormat>
        <label>Student Success Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Success Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>