unpackaged/main/default/objects/Student_Success_Survey__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>(Optional) Please share any additional information that might help faculty, your ASC and/or your SLC better support you this semester. If you have applied for and qualified for specific accommodations from your college of record (RBC or CoS), be sure to meet with each of your instructors and your ASC to discuss these. Please also consider sharing these here, along with any questions you have about accommodations (including questions about how to apply for them). Thank you for completing this survey!</description>
    <inlineHelpText>(Optional) Please share any additional information that might help faculty, your ASC and/or your SLC better support you this semester. If you have applied for and qualified for specific accommodations from your college of record (RBC or CoS), be sure to meet with each of your instructors and your ASC to discuss these. Please also consider sharing these here, along with any questions you have about accommodations (including questions about how to apply for them). Thank you for completing this survey!</inlineHelpText>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>