unpackaged/main/default/objects/Student_Success_Survey__c/fields/Challenges_that_impact_academic_success__c.field-meta.xml
<CustomField>
    <fullName>Challenges_that_impact_academic_success__c</fullName>
    <label>Challenges that impact academic success</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Procrastination / issues with time management</fullName>
            </value>
            <value>
                <fullName>Distractions (social media, texting, video games, YouTube, etc.)</fullName>
            </value>
            <value>
                <fullName>Difficulty staying organized</fullName>
            </value>
            <value>
                <fullName>Lack of motivation</fullName>
            </value>
            <value>
                <fullName>Not enjoying classes and/or activities</fullName>
            </value>
            <value>
                <fullName>Personal/familial obligations and responsibilities</fullName>
            </value>
            <value>
                <fullName>Learning differences and/or learning styles</fullName>
            </value>
            <value>
                <fullName>Concerns about educational preparedness (reading and writing skills, etc.)</fullName>
            </value>
            <value>
                <fullName>Concerns about &quot;hidden curriculum&quot; (staff expectations, access to resources, etc.)</fullName>
            </value>
            <value>
                <fullName>Problems with workspace</fullName>
            </value>
            <value>
                <fullName>Problems with technology (computer, internet access/wifi, online platforms, email, etc.)</fullName>
            </value>
            <value>
                <fullName>Issues with social life / extracurriculars</fullName>
            </value>
            <value>
                <fullName>Not feeling a sense of belonging and/or feeling socially isolated or excluded</fullName>
            </value>
            <value>
                <fullName>Not feeling respected, heard or understood</fullName>
            </value>
            <value>
                <fullName>Feeling discriminated against (due to race, gender identity, sexual orientation, nationality, etc.)</fullName>
            </value>
            <value>
                <fullName>Daily self-care (sleep, diet, screen time, exercise, breaks, etc.)</fullName>
            </value>
            <value>
                <fullName>Physical illness, hospital stays, doctor&#39;s appointments, etc.</fullName>
            </value>
            <value>
                <fullName>Mental health challenges (homesickness, chronic stress, anxiety, etc.)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Concerns about &quot;hidden curriculum&quot; (faculty expectations, access to resources, etc.)</fullName>
                <isActive>false</isActive>
                <label>Concerns about &quot;hidden curriculum&quot; (faculty expectations, access to resources, etc.)</label>
            </value>
            <value>
                <fullName>Concerns about academic preparedness (reading and writing skills, etc.)</fullName>
                <isActive>false</isActive>
                <label>Concerns about academic preparedness (reading and writing skills, etc.)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>