unpackaged/main/default/objects/Student_Success_Survey__c/fields/Checkpoint__c.field-meta.xml
<CustomField>
    <fullName>Checkpoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checkpoint</label>
    <referenceTo>Checkpoint__c</referenceTo>
    <relationshipLabel>Student Success Surveys</relationshipLabel>
    <relationshipName>Student_Success_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>