unpackaged/main/default/objects/Student_Success_Survey__c/fields/Describe_yourself_as_a_learner__c.field-meta.xml
<CustomField>
    <fullName>Describe_yourself_as_a_learner__c</fullName>
    <description>Please describe yourself as a learner. What are your favorite subjects, and why? What helps you to learn, and why? What makes it harder for you to learn, and why?</description>
    <inlineHelpText>Please describe yourself as a learner. What are your favorite subjects, and why? What helps you to learn, and why? What makes it harder for you to learn, and why?</inlineHelpText>
    <label>Describe yourself as a learner</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>