unpackaged/main/default/objects/Student_Success_Survey__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <formula>Enrollment_Record__r.Student_Account__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>