unpackaged/main/default/objects/Student_Success_Survey__c/fields/Email_Missing_Enrollment_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Missing_Enrollment_Id__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Student&#39;s email if we received a bunk enrollment ID from CampusGroups</description>
    <label>Email Missing Enrollment Id</label>
    <type>Email</type>
</CustomField>