unpackaged/main/default/objects/Student_Success_Survey__c/fields/Enrollment_Record__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment Record</label>
    <referenceTo>Enrollment_Record__c</referenceTo>
    <relationshipLabel>Student Success Surveys</relationshipLabel>
    <relationshipName>Student_Success_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>