unpackaged/main/default/objects/Student_Success_Survey__c/fields/Full_Name_Missing_Enrollment_Id__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Missing_Enrollment_Id__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Contains the student&#39;s full name if we received a bunk enrollment ID from CampusGroups</description>
    <label>Full Name Missing Enrollment Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>