unpackaged/main/default/objects/Student_Success_Survey__c/fields/GPA_Goal__c.field-meta.xml
<CustomField>
    <fullName>GPA_Goal__c</fullName>
    <label>GPA Goal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4.0</fullName>
            </value>
            <value>
                <fullName>3.5 or higher</fullName>
            </value>
            <value>
                <fullName>3.0 or higher</fullName>
            </value>
            <value>
                <fullName>2.5 or higher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>