unpackaged/main/default/objects/Student_Success_Survey__c/fields/Grade_Goal__c.field-meta.xml
<CustomField>
    <fullName>Grade_Goal__c</fullName>
    <label>Grade Goal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Straight As</fullName>
            </value>
            <value>
                <fullName>No grade below a B</fullName>
            </value>
            <value>
                <fullName>No grade below a C</fullName>
            </value>
            <value>
                <fullName>No grade below a D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>