unpackaged/main/default/objects/Student_Success_Survey__c/fields/Hope_to_Learn__c.field-meta.xml
<CustomField>
    <fullName>Hope_to_Learn__c</fullName>
    <description>What do you hope to learn this semester, and why?</description>
    <inlineHelpText>What do you hope to learn this semester, and why?</inlineHelpText>
    <label>Hope to Learn</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>