unpackaged/main/default/objects/Student_Success_Survey__c/fields/Other_challenges_that_impact_academics__c.field-meta.xml
<CustomField>
    <fullName>Other_challenges_that_impact_academics__c</fullName>
    <inlineHelpText>If a student selected Other, their answer appears here</inlineHelpText>
    <label>Other challenges that impact academics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>