unpackaged/main/default/objects/Student_Success_Survey__c/fields/Other_Support_Strategies__c.field-meta.xml
<CustomField>
    <fullName>Other_Support_Strategies__c</fullName>
    <inlineHelpText>If a student selects Other on support strategies, it will appear here.</inlineHelpText>
    <label>Other Support Strategies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>