unpackaged/main/default/objects/Student_Success_Survey__c/fields/Plan_to_Transfer_to_4_Year_College__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_Transfer_to_4_Year_College__c</fullName>
    <description>At this time, do you plan to transfer to a 4-year college (at some point in the future)?</description>
    <inlineHelpText>At this time, do you plan to transfer to a 4-year college (at some point in the future)?</inlineHelpText>
    <label>Plan to Transfer to 4-Year College</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>