unpackaged/main/default/objects/Student_Success_Survey__c/fields/Program_Id_Log__c.field-meta.xml
<CustomField>
    <fullName>Program_Id_Log__c</fullName>
    <label>Program Id Log</label>
    <length>255</length>
    <type>Text</type>
</CustomField>