unpackaged/main/default/objects/Student_Success_Survey__c/fields/Program_Location__c.field-meta.xml
<CustomField>
    <fullName>Program_Location__c</fullName>
    <formula>Enrollment_Record__r.Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Location</label>
    <type>Text</type>
</CustomField>