unpackaged/main/default/objects/Student_Success_Survey__c/fields/Questions_about_College_after_Verto__c.field-meta.xml
<CustomField>
    <fullName>Questions_about_College_after_Verto__c</fullName>
    <description>What questions do you have regarding college and/or college transfer after Verto? What would you like to learn more about?</description>
    <inlineHelpText>What questions do you have regarding college and/or college transfer after Verto? What would you like to learn more about?</inlineHelpText>
    <label>Questions about College after Verto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>