unpackaged/main/default/objects/Student_Success_Survey__c/fields/Questions_for_Career_Path_or_Majors__c.field-meta.xml
<CustomField>
    <fullName>Questions_for_Career_Path_or_Majors__c</fullName>
    <description>What questions do you have regarding possible career paths or majors? What would you like to learn more about?</description>
    <inlineHelpText>What questions do you have regarding possible career paths or majors? What would you like to learn more about?</inlineHelpText>
    <label>Questions for Career Path or Majors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>