unpackaged/main/default/objects/Student_Success_Survey__c/fields/Support_strategies_you_may_try__c.field-meta.xml
<CustomField>
    <fullName>Support_strategies_you_may_try__c</fullName>
    <description>What supports or strategies might you like to try this semester? (Check all that apply.)</description>
    <inlineHelpText>What supports or strategies might you like to try this semester? (Check all that apply.)</inlineHelpText>
    <label>Support strategies you may try</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Time tracking/time boxing (using a calendar, timer or app to monitor focus/time spent on a task)</fullName>
            </value>
            <value>
                <fullName>Using task lists and calendars to organize and schedule specific tasks</fullName>
            </value>
            <value>
                <fullName>Using a reward system or goal-setting journal</fullName>
            </value>
            <value>
                <fullName>Tracking distractions and creating plan to limit them</fullName>
            </value>
            <value>
                <fullName>Rearranging and/or relocating workspace</fullName>
            </value>
            <value>
                <fullName>Addressing technology issues</fullName>
            </value>
            <value>
                <fullName>Creating a social calendar to connect regularly with friends and family</fullName>
            </value>
            <value>
                <fullName>Meeting with staff (e.g. Academic Provider faculty at the Verto locations, ASC, SLC, or College Counselor) to discuss experience</fullName>
            </value>
            <value>
                <fullName>Regular meeting(s) with staff (e.g. Academic Provider faculty at the Verto locations, ASC, SLC) to practice skills, discuss work and/or goals</fullName>
            </value>
            <value>
                <fullName>Regular meeting(s) with peers, study group and/or attend study hall with ASC</fullName>
            </value>
            <value>
                <fullName>Creating a self-care/mental health routine and/or practice (a) new habit(s)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Meeting with staff (e.g. faculty, ASC, SLC, or College Counselor) to discuss experience</fullName>
                <isActive>false</isActive>
                <label>Meeting with staff (e.g. faculty, ASC, SLC, or College Counselor) to discuss experience</label>
            </value>
            <value>
                <fullName>Regular meeting(s) with staff (e.g. faculty, ASC, SLC) to practice skills, discuss work and/or goals</fullName>
                <isActive>false</isActive>
                <label>Regular meeting(s) with staff (e.g. faculty, ASC, SLC) to practice skills, discuss work and/or goals</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>