unpackaged/main/default/objects/Student_Success_Survey__c/fields/What_brought_you_to_Verto__c.field-meta.xml
<CustomField>
    <fullName>What_brought_you_to_Verto__c</fullName>
    <description>What brought you to Verto? Why did you decide to join this particular program? What are you most excited to experience this semester, and why? What are you most concerned/unsure about, and why?</description>
    <inlineHelpText>What brought you to Verto? Why did you decide to join this particular program? What are you most excited to experience this semester, and why? What are you most concerned/unsure about, and why?</inlineHelpText>
    <label>What brought you to Verto?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>