unpackaged/main/default/objects/Student_Success_Survey__c/fields/Writing_Score_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Writing_Score_Explanation__c</fullName>
    <description>Why did you give yourself that particular writing score?</description>
    <inlineHelpText>Why did you give yourself that particular writing score?</inlineHelpText>
    <label>Writing Score Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>