unpackaged/main/default/objects/Student_Success_Survey__c/fields/Writing_Skill_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Writing_Skill_Confidence__c</fullName>
    <description>On a scale of 1 (not confident) to 6 (very confident), describe your confidence in your writing skills.</description>
    <inlineHelpText>On a scale of 1 (not confident) to 6 (very confident), describe your confidence in your writing skills.</inlineHelpText>
    <label>Writing Skill Confidence</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>