unpackaged/main/default/objects/Student_Success_Survey__c/listViews/Orphaned_Student_Success_Surveys.listView-meta.xml
<ListView>
    <fullName>Orphaned_Student_Success_Surveys</fullName>
    <columns>NAME</columns>
    <columns>Full_Name_Missing_Enrollment_Id__c</columns>
    <columns>Email_Missing_Enrollment_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enrollment_Record__c</field>
        <operation>equals</operation>
    </filters>
    <label>Orphaned Student Success Surveys</label>
</ListView>